--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="src\assets\mymovieApp-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MyMovieApp - Una colección de tus pelis favoritas</title>
+  <title>MyMovieFavs - Una colección de tus pelis favoritas</title>
 </head>
 
 <body>
